# AGL

./: .gitignore  LICENSE  README.md
AGL/: agl.hpp
AGL/include/: BaseWindow.hpp  Camera.hpp  Circle.hpp  Color.hpp  Cuboid.hpp  Drawable.hpp  Event.hpp  Float2.hpp  Float3.hpp  Font.hpp  GLPrimative.cpp  GLPrimative.hpp  GLTriangle.hpp  Int2.hpp  Key.hpp  Keyboard.hpp  Macros.hpp  Mat.hpp  Mat4f.hpp  QuadShape.hpp  Rectangle.hpp  RectangleShape.hpp  RenderWindow.hpp  Shader.hpp  ShaderBuilder.hpp  Shape.hpp  Text.hpp  Texture.hpp  Vec.hpp  Vec2f.hpp  Vec2i.hpp  Vec3f.hpp  Vec4f.hpp  Vector2f.hpp  Vector2i.hpp  Vector3f.hpp  Vector4f.hpp  crossfunctions.hpp  crossplatform.hpp  external.hpp  (+1 more)
AGL/src/: Camera.cpp  Circle.cpp  Color.cpp  Cuboid.cpp  Drawable.cpp  Event.cpp  Font.cpp  GLPrimative.cpp  GLTriangle.cpp  Key.cpp  Keyboard.cpp  Mat4f.cpp  Rectangle.cpp  RectangleShape.cpp  RenderWindow.cpp  Shader.cpp  ShaderBuilder.cpp  Shape.cpp  Text.cpp  Texture.cpp  Vec.cpp  Vec3f.cpp  crossFunctions.cpp  crossplatform.cpp  math.cpp
examples/: ad.cpp  frag.frag  frag1.frag  makefile  test  test.cpp  vert.vert  vert1.vert
examples/OrbitSim/: makefile
examples/OrbitSim/inc/: Planet.hpp
examples/OrbitSim/src/: Planet.cpp  main.cpp
examples/Rectangle/: CMakeLists.txt
examples/Rectangle/src/: main.cpp
examples/Shapes/: CMakeLists.txt  makefile
examples/Shapes/src/: main.cpp
examples/Triangle/: makefile
examples/Triangle/src/: main.cpp
examples/test/: CMakeLists.txt
examples/test/src/: main.cpp
examples/text/: CMakeLists.txt  makefile
examples/text/src/: main.cpp
